--- a/home-manager/hypr/hyprland.conf
+++ b/home-manager/hypr/hyprland.conf
@@ -311,7 +311,10 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-########################
-### CONFIGURE POLKIT ###
-########################
+##########################
+### CONFIGURE PROGRAMS ###
+##########################
 exec-once = systemctl --user start hyprpolkitagent
+
+# Regreet
+exec-once = regreet; hyprctl dispatch exit
