hyprland.conf: change windowrule to windowrulev2 for nofocus setting

--- a/home-manager/hypr/hyprland.conf
+++ b/home-manager/hypr/hyprland.conf
@@ -309,4 +309,4 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 windowrule = suppress_event maximize, class:.*
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
